// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalanceSheetReducer should update state upon failure 1`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "error": "Some error",
  "status": "error",
}
`;

exports[`BalanceSheetReducer should update state upon failure 2`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "error": "Some error",
  "status": "error",
}
`;

exports[`BalanceSheetReducer should update state upon load success 1`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
    "2017-01-03": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "status": "loaded",
}
`;

exports[`BalanceSheetReducer should update state upon request 1`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "status": "loading",
}
`;

exports[`BalanceSheetReducer should update state upon request 2`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "status": "loading",
}
`;

exports[`BalanceSheetReducer should update state upon update success 1`] = `
Object {
  "balanceSheet": Object {
    "2017-01-01": Object {
      "equity": 155070,
      "totalAssets": 1000070,
      "totalLiabilities": 845000,
    },
    "2017-01-02": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
    "2017-01-03": Object {
      "equity": 165080,
      "totalAssets": 1000080,
      "totalLiabilities": 835000,
    },
  },
  "status": "loaded",
}
`;
